migrate the files from old repo

--- a/JSBA.CloudCore.Api/appsettings.Development.json
+++ b/JSBA.CloudCore.Api/appsettings.Development.json
@@ -2,7 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "RoomExchange.API.Services.ExtractionEngine": "Information"
+    },
+    "Console": {
+      "IncludeScopes": false,
+      "TimestampFormat": "HH:mm:ss "
     }
   }
 }
