--- a/JSBA.CloudCore.Extractor/JSBA.CloudCore.Extractor.csproj
+++ b/JSBA.CloudCore.Extractor/JSBA.CloudCore.Extractor.csproj
@@ -4,6 +4,23 @@
     <ProjectReference Include="..\JSBA.CloudCore.Contracts\JSBA.CloudCore.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
+    <PackageReference Include="NetTopologySuite" Version="2.6.0" />
+    <PackageReference Include="PDFiumSharp" Version="1.4660.0-alpha1" />
+    <PackageReference Include="PdfPig" Version="0.1.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="pdfium.dll" Condition="Exists('pdfium.dll')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="extraction-settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
