- add pdfium set up script - update .gitignore to avoid uploading generated files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ TestResults/
 # Misc
 *.opendb
 *.VC.db
+
+# Native libraries (should be downloaded via setup-pdfium.ps1)
+**/pdfium.dll
+**/libpdfium.so
+**/libpdfium.dylib
+args.gn
+PDFiumConfig.cmake
+licenses/*.*
