--- a/JSBA.CloudCore.Extractor/ExtractorSettings/extraction-settings.json
+++ b/JSBA.CloudCore.Extractor/ExtractorSettings/extraction-settings.json
@@ -93,6 +93,37 @@
         "maxRoomCount": 25
       }
     },
+    "Project3_roomtag.pdf": {
+      "filters": {
+        "lineWidth": {
+          "enabled": false,
+          "minWidth": 0.5,
+          "maxWidth": 8.0
+        },
+        "length": {
+          "enabled": true,
+          "minLength": 20.0
+        },
+        "shape": {
+          "enabled": false,
+          "allowedShapes": [ "line", "rectangle" ]
+        },
+        "singleSegment": {
+          "enabled": false,
+          "offset": 20.0
+        }
+      },
+      "polygon": {
+        "removeNested": false,
+        "removeOuter": true,
+        "gapTolerance": 0
+      },
+      "roomSize": {
+        "enabled": false,
+        "minRoomCount": 5,
+        "maxRoomCount": 25
+      }
+    },
     "ea-151c - reflected ceiling plan - first floor level area c.pdf": {
       "filters": {
         "lineWidth": {
